# Hull

./: CMakeLists.txt
.github/workflows/: runTests.yml
src/: CMakeLists.txt
src/header/Hull/: Coordinate.h  Definitions.h  Error.h  Hull.h
src/src/: Hull.cpp
tests/: CMakeLists.txt  Clouds.cpp  Construction.cpp  HullToObj.cpp  HullToObj.h  Prisms.cpp  SingleUpdate.cpp  Tests.cpp  Utils.cpp  Utils.h
